@@ -204,6 +204,18 @@
 <td><p>[K]</p></td>
 <td><p>total uncertainty of the H2CO effective temperature</p></td>
 </tr>
+<tr class="row-odd"><td><p><strong>H2CO_effective_temperature_uncertainty_random</strong></p></td>
+<td><p>double</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[K]</p></td>
+<td><p>random uncertainty of the H2CO effective temperature</p></td>
+</tr>
+<tr class="row-even"><td><p><strong>H2CO_effective_temperature_uncertainty_systematic</strong></p></td>
+<td><p>double</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[K]</p></td>
+<td><p>systematic uncertainty of the H2CO effective temperature</p></td>
+</tr>
 <tr class="row-odd"><td><p><strong>index</strong></p></td>
 <td><p>int32</p></td>
 <td><p>{<em>time</em>}</p></td>
@@ -303,6 +315,14 @@
 <tr class="row-even"><td><p><strong>H2CO_effective_temperature_uncertainty</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/TEMPERATURE.EFFECTIVE.H2CO_UNCERTAINTY.COMBINED.STANDARD</strong></p></td>
+</tr>
+<tr class="row-odd"><td><p><strong>H2CO_effective_temperature_uncertainty_random</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/TEMPERATURE.EFFECTIVE.H2CO_UNCERTAINTY.RANDOM.STANDARD</strong></p></td>
+</tr>
+<tr class="row-even"><td><p><strong>H2CO_effective_temperature_uncertainty_systematic</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/TEMPERATURE.EFFECTIVE.H2CO_UNCERTAINTY.SYSTEMATIC.STANDARD</strong></p></td>
 </tr>
 </tbody>
 </table>
