@@ -1,3 +1,6 @@
+* Updates to product ingestions:
+  - GEOMS PANDORA: add systematic/random uncertainty for effective temperature.
+
 1.15.1 2022-05-18
 ~~~~~~~~~~~~~~~~~
 
